@@ -35,6 +35,8 @@
  *      processed in the current transaction can be stored. If the \c BytesProcessed parameter is non \c NULL, each time the endpoint
  *      bank becomes full and the packet is sent, the routine will exit with the new \ref ENDPOINT_RWSTREAM_IncompleteTransfer
  *      error code to allow the user application to determine when to send the next chunk of data.
+ *    - The \ref CDC_Device_SendString() function now expects a null terminated string instead of an explicit length. Existing code
+ *      should use the new \ref CDC_Device_SendData() function, or remove the length parameter from the function call.
  *
  *  <b>Host Mode</b>
  *    - The Pipe stream functions now all require a \c BytesProcessed parameter instead of the previous callback parameter.
@@ -42,6 +44,9 @@
  *      processed in the current transaction can be stored. If the BytesProcessed parameter is non \c NULL, each time the pipe
  *      bank becomes full and the packet is sent, the routine will exit with the new \ref PIPE_RWSTREAM_IncompleteTransfer
  *      error code to allow the user application to determine when to send the next chunk of data.
+ *    - The \ref PRNT_Host_SendString() and \ref CDC_Host_SendString() functions now expect a null terminated string instead of an explicit
+ *      length. Existing code should use the new \ref PRNT_Host_SendData() and \ref CDC_Host_SendData() functions, or remove the
+ *      length parameter from the function call.
  *
  *  \section Sec_Migration101122 Migrating from 100807 to 101122
  *  <b>USB Core</b>
